# appa

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/appa/: __init__.py  appa.py  model.py  sampled.py  utils.py
