[project]
name = "appa"
version = "0.1.0"
description = "APPA is the Approximate Parametric Projection Algorithm"
readme = "README.md"
authors = [
    { name = "Alister Machado", email = "a.machadodosreis@uu.nl" }
]
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.5.5",
    "numpy>=1.26.4",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "scipy>=1.16.2",
    "tensorflow-projection-qm>=0.2.3",
]
