[project]
name = "appa"
version = "0.1.0"
description = "APPA is the Approximate Parametric Projection Algorithm"
readme = "README.md"
authors = [
    { name = "Alister Machado", email = "a.machadodosreis@uu.nl" }
]
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.5.5",
    "numpy>=1.26.4",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "torch-kde>=0.1.5",
]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "pre-commit>=4.3.0",
    "scipy>=1.16.2",
    "tensorflow-projection-qm",
    "umap-learn>=0.5.9.post2",
]

[tool.uv.sources]
tensorflow-projection-qm = { path = "../tf-projection-qm" }
torch-kde = { git = "https://github.com/amreis/torch-kde" }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["NPY201"]
